--- a/about.qmd
+++ b/about.qmd
@@ -6,14 +6,13 @@ about:
   links:
     - icon: twitter
       text: Twitter
-      href: https://twitter.com
-    - icon: linkedin
-      text: LinkedIn
-      href: https://linkedin.com
+      href: https://twitter.com/patosaid_cl
+    - icon: instagram
+      text: Instagram
+      href: https://instagram.com/patosaid.cl
     - icon: github
       text: Github
-      href: https://github.com
-
+      href: https://github.com/patosaid
 ---
 
 About this blog
