editar enlace blog

--- a/index.qmd
+++ b/index.qmd
@@ -17,4 +17,4 @@ about:
 
 ¡Hola! Soy **Patricio Said**, Ingeniero Civil Industrial, diplomado en Big Data y Machine Learning. Me apasiona la programación y el análisis de datos, utilizar la tecnología para mejorar la eficiencia de los procesos y la toma de decisiones informadas.
 
-Fuera del mundo de los datos, disfruto cocinar la auténtica [pizza napolitana](https://es.wikipedia.org/wiki/Pizza_napolitana) y [pintar al óleo](https://www.instagram.com/p/C_eCqyDy-2A/?img_index=1). En esta página encontrarás mi [blog](patosaid.cl/blog) con algunos de mis códigos que he utilizado referente a ciencia de datos.
+Fuera del mundo de los datos, disfruto cocinar la auténtica [pizza napolitana](https://es.wikipedia.org/wiki/Pizza_napolitana) y [pintar al óleo](https://www.instagram.com/p/C_eCqyDy-2A/?img_index=1). En esta página encontrarás mi [blog](blog) con algunos de mis códigos que he utilizado referente a ciencia de datos.
