--- a/posts/post-with-code/index.qmd
+++ b/posts/post-with-code/index.qmd
@@ -8,23 +8,24 @@ categories: ["ggplot2","mapa"]
 description: ""
 ---
 
-Es común mostrar dentro de la metodología de un trabajo el área geográfica de donde se realizó el estudio. Si no estas familiarizado con datos espaciales, aquí te muestro una alternativa de cómo mostrar la zona de estudio (en lugar de ir a GoogleMaps y sacar una screenshot).  
+![](mapa.png)
 
-Primero cargamos las librerias, `readr` para importar los datos y `ggplot2` para graficar.  
+Es común mostrar dentro de la metodología de un trabajo el área geográfica de donde se realizó el estudio. Si no estas familiarizado con datos espaciales, aquí te muestro una alternativa de cómo mostrar la zona de estudio (en lugar de ir a GoogleMaps y sacar una screenshot).
 
+Primero cargamos las librerias, `readr` para importar los datos y `ggplot2` para graficar.
 
 ```{r message=FALSE}
 library(readr)
 library(ggplot2)
 ```
 
-Según la zona que deseas mostrar y el nivel de detalle (por ejemplo los límite de los estados/regiones o nombres de ciudades) requerirás de determinadas fuentes de datos. Los paquetes `ggmap` y `rnaturalearth` incluyen conjuntos de datos para plotear el mundo con los límites internacionales, pero a nivel de estado solo está disponible para Estados Unidos.  Por lo anterior, en este post trabajo con los datos de [GADM](www.gadm.org). 
+Según la zona que deseas mostrar y el nivel de detalle (por ejemplo los límite de los estados/regiones o nombres de ciudades) requerirás de determinadas fuentes de datos. Los paquetes `ggmap` y `rnaturalearth` incluyen conjuntos de datos para plotear el mundo con los límites internacionales, pero a nivel de estado solo está disponible para Estados Unidos. Por lo anterior, en este post trabajo con los datos de [GADM](www.gadm.org).
 
-Para este ejemplo, trabajo con datos de Chile en formato sf provenientes de <https://www.gadm.org/download_country_v3.html>. Puedes descargar los datos para otro país cambiando la URL del siguiente código.  
+Para este ejemplo, trabajo con datos de Chile en formato sf provenientes de <https://www.gadm.org/download_country_v3.html>. Puedes descargar los datos para otro país cambiando la URL del siguiente código.
 
-Descargamos los datos y graficamos:  
+Descargamos los datos y graficamos:
 
-```{r grafica1}
+```{r essage=FALSE , grafica1}
 cl <- readRDS(url("https://geodata.ucdavis.edu/gadm/gadm3.6/Rsf/gadm36_CHL_1_sf.rds", "rb"))
 #class(cl) sf
 
@@ -32,24 +33,21 @@ ggplot(data = cl) +
   geom_sf()
 ```
 
-Ya tenemos el mapa completo de Chile y con sus regiones delimitadas. Para este ejemplo voy a determinar la zona de estudio desde la Región del Maule hasta la Región de los Ríos, pero tambíen quiero mostrar los alrededores para que el lector pueda ubicarse. Para esto voy a cambiar los límites de la gráfica, de manera de hacer un "zoom" en el mapa. Los límites de la gráfica se pueden modificar filtrando el conjunto de datos según las regiones que queremos mostrar o modificar los parámetros `xlim` y `ylim` con un par de coordenadas. Esta última alternativa es más artesanal pero también una solución simple si no tienes experiencia con objetos `sf`.  
+Ya tenemos el mapa completo de Chile y con sus regiones delimitadas. Para este ejemplo voy a determinar la zona de estudio desde la Región del Maule hasta la Región de los Ríos, pero tambíen quiero mostrar los alrededores para que el lector pueda ubicarse. Para esto voy a cambiar los límites de la gráfica, de manera de hacer un "zoom" en el mapa. Los límites de la gráfica se pueden modificar filtrando el conjunto de datos según las regiones que queremos mostrar o modificar los parámetros `xlim` y `ylim` con un par de coordenadas. Esta última alternativa es más artesanal pero también una solución simple si no tienes experiencia con objetos `sf`.
 
-El par de coordenadas las puedes obtener desde OpenStreetMap o GoogleMaps.  
+El par de coordenadas las puedes obtener desde OpenStreetMap o GoogleMaps.
 
-![](/post/2019-09-21-creando-mapa-para-mostrar-la-zona-de-estudio.en_files/punto1.PNG)
+El límite superior lo determiné en la coordenada (-27,-80) y el inferior en (-42,-67). En `ggplot()` queda de la siguiente forma:
 
-El límite superior lo determiné en la coordenada (-27,-80) y el inferior en (-42,-67). En `ggplot()` queda de la siguiente forma:  
-
-
-```{r grafica2}
+```{r essage=FALSE , grafica2}
 ggplot(data = cl) +
   geom_sf(fill ="white")+
   coord_sf(xlim = c(-67, -80), ylim = c(-42, -27))
 ```
 
-Con `geom_rect()` dibujo un rectángulo:  
+Con `geom_rect()` dibujo un rectángulo:
 
-```{r grafica3}
+```{r essage=FALSE, grafica3}
 ggplot(data = cl) +
   geom_sf(fill ="white")+
   coord_sf(xlim = c(-67, -80), ylim = c(-42, -27))+
@@ -57,8 +55,7 @@ ggplot(data = cl) +
             fill = NA, colour = "black", size = 1)
 ```
 
-Para finalizar, con la librería `ggspatial` y su función `annotation_north_arrow()` se puede incluir una flecha. Y de manera rústica agrego manualmente algunos nombres de ciudades de referencia por medio de la función `annotate()`.  
-
+Para finalizar, con la librería `ggspatial` y su función `annotation_north_arrow()` se puede incluir una flecha. Y de manera rústica agrego manualmente algunos nombres de ciudades de referencia por medio de la función `annotate()`.
 
 ```{r message= F, warning=FALSE}
 library(ggspatial)
@@ -90,16 +87,13 @@ ggplot(data = cl) +
   theme_bw()
 ```
 
-Guardamos la gráfica con `ggsave()`:  
+Guardamos la gráfica con `ggsave()`:
 
 ```{r eval = FALSE}
 ggsave("mapa.png", width = 6, height = 8, dpi = "screen")
 ```
 
-
-
-También puedes mostrar el área de estudio de manera interactiva y simple mediante **Leaftle**:  
-
+También puedes mostrar el área de estudio de manera interactiva y simple mediante **Leaftle**:
 
 ```{r eval = FALSE}
 library(leaflet)
@@ -111,7 +105,6 @@ leaflet() %>% addTiles() %>%
     fillColor = "transparent") %>% 
   addProviderTiles(providers$Stamen.Toner)
 ```
-
 
 ```{r out.width='100%', fig.height=5, eval=require('leaflet'),echo=FALSE  }
 library(leaflet)
